--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     padding: 40px;
     color: #242424;
     border-top: 10px solid #242424;
-    background: #fff;
+    background: rgb(255, 254, 254);
 }
 
 
