--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
   border-radius: 10px;
 }
 
-@media (max-wdith: 400px) {
+@media (max-width: 400px) {
   .toggle-button {
     display: flex;
   }
