--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  background: #e3e3e3;
+  background: #ffffff;
 }
 
 * {
@@ -9,13 +9,14 @@ html {
 body {
   margin:0;
   padding: 0;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: #18453B;
   color: white;
 }
 
@@ -41,8 +42,9 @@ body {
   display: block;
 }
 
-.navbar-links li:hover {
-  background-color: #555;
+.navbar-links a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
 .toggle-button {
@@ -180,8 +182,11 @@ body {
     color: black;
   }
 
+.body-text{
+  padding: 1rem;
+}
 
-/* *******************************FAQ styling***************************************** */
+  /* *******************************FAQ styling***************************************** */
 .faq-heading{
    
     border-bottom: #777;
