--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .title {
   font-size: 1.5rem;
-  margin: 0.5rem;
+  margin: 0.75rem;
 }
 
 .navbar-links ul {
@@ -98,8 +98,6 @@ body {
   }
 }
 
-
-
 /* ****************************** Header image formatting ************************* */
 
 .index-header {
@@ -141,9 +139,9 @@ body {
   background-size: cover;
   background-position: center center;
 }
- /* ******************************* main header styling***************************************** */
+ /* ******************************* Main header styling***************************************** */
 .main-header{
-  padding: 0.25rem;
+  padding: 0.5rem;
   position: relative;
   background-color: #18453B;
   color: white;
@@ -152,6 +150,7 @@ body {
 
 .body-text{
   padding: 1rem;
+  background-color: rgb(251, 251, 251);
 }
 
   /* *******************************FAQ styling***************************************** */
