--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 .index-header {
   min-width: 100%;
   height: 300px;
-  background: url('bright_panels.jpg');
+  background: url('panels_small.png');
   background-size: cover;
   background-position: center;
 }
@@ -111,7 +111,7 @@ body {
 .calculator-header {
   min-width: 100%;
   height: 300px;
-  background: url('cows_grazing.jpg');
+  background: url('lineup.jpg');
   background-size: cover;
   background-position: center center;
 }
@@ -127,7 +127,7 @@ body {
 .resources-header {
   min-width: 100%;
   height: 300px;
-  background: url('roof_panels.jpg');
+  background: url('cows_grazing.jpg');
   background-size: cover;
   background-position: center center;
 }
@@ -135,7 +135,7 @@ body {
 .questions-header {
   min-width: 100%;
   height: 300px;
-  background: url('bright_panels.jpg');
+  background: url('wide_panels.jpg');
   background-size: cover;
   background-position: center center;
 }
