--- a/style.css
+++ b/style.css
@@ -389,3 +389,48 @@ margin: auto;
   tr:hover {
     background-color: #DADEDF;
   }
+
+  /*************************** Funding Page Styling ********************************/
+  /* Default table styles */
+.funding-table {
+  padding: 5px;
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+}
+
+.funding-table th,
+.funding-table td {
+  padding: 10px;
+  text-align: left;
+  width: 20%;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .funding-table th,
+  .funding-table td {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  .funding--table th {
+    text-align: center;
+  }
+  
+  .funding-table tbody td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    display: block;
+  }
+    /* Apply shaded background to column one */
+    .shaded-column {
+      background-color: #8bca84; /* Define the shade color you want */
+    }
+      /* Hide the first row */
+  .hide-row {
+    display: none;
+  }
+}
