--- a/style.css
+++ b/style.css
@@ -397,9 +397,35 @@ margin: auto;
     width: 33%;
     padding: 5px;
   }
-  tr:hover {
+  /*tr:hover {
     background-color: #DADEDF;
   }
+  */
+
+  /* Initial styles for the table row */
+.table-row {
+  background-color: white;
+}
+
+/* Styles for the hover effect */
+.table-row:hover {
+  background-color: gray;
+}
+/*** make hover work with tap on iphone ***/
+.tooltip {
+  display: none;
+  position: absolute;
+  background-color: rgba(151, 14, 14, 0.8);
+  color: rgb(34, 31, 202);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.table-row:hover .tooltip {
+  display: block;
+}
+
+
 
   /*************************** Funding Page Styling *************************/
  
