--- a/style.css
+++ b/style.css
@@ -377,10 +377,9 @@ margin: auto;
     }
   }
   
-  table {
-    width:600px;
-    border: 1px;
-    padding: 5px;
+  .table5 {
+    padding: 10%;
+    width:100%;
   }
   
   th {
@@ -397,35 +396,9 @@ margin: auto;
     width: 33%;
     padding: 5px;
   }
-  /*tr:hover {
+  tr:hover {
     background-color: #DADEDF;
-  }
-  */
-
-  /* Initial styles for the table row */
-.table-row {
-  background-color: white;
-  transition: background-color 0.3s ease;
-}
-
-/* Styles for the hover effect */
-.table-row.active{
-  background-color: gray;
-}
-/*** make hover work with tap on iphone ***/
-.tooltip {
-  display: none;
-  position: absolute;
-  background-color: rgba(151, 14, 14, 0.8);
-  color: rgb(34, 31, 202);
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.table-row.active .tooltip {
-  display: block;
-}
-
+  }  
 
 
   /*************************** Funding Page Styling *************************/
