--- a/style.css
+++ b/style.css
@@ -333,6 +333,12 @@ margin: auto;
     /*width: 100%; /* Width is 100% of its parent element */
     /*height: 20%; /* Initial height set to 60% of width */
   
+    @media screen and (max-width: 900px) {
+      .loanChartContainer {
+        height: 300px;
+      }
+    }
+
 
   .table-container1 {
     display: flex;
