remove aspect ratio on loan graph

--- a/style.css
+++ b/style.css
@@ -394,11 +394,10 @@ margin: auto;
     background-color: #DADEDF;
   }  
 
-  @media screen and (max-width: 900px) {
     .cashFlowChartContainer {
-      height:100%;
+      width:100%;
     }
-  }
+  
 
   /*************************** Funding Page Styling *************************/
  
